# IELTS-Writing-Evaluator

./: .gitignore  README.md  debug_official_qwk.py  debug_qwk.py  file-48d18e02718947628367f38754d22c86.csv  pyproject.toml  test_local.py  test_response.json  test_training_data.py
.github/: copilot-instructions.md
application/: README.md  index.html  package-lock.json  pnpm-lock.yaml
application/src/: App.tsx  index.css
cook-training-data/: README.md
cook-training-data/finetuning_data/: metadata.json  sample_readable.json  test.jsonl  test_pretty.jsonl  validation.jsonl
cook-training-data/test_synthetic_scores/: metadata.json  train.jsonl  validation.jsonl
data/cook/: cook.csv  link.txt
docs/: dynamic_prompt_loading.md  specifications.md
experiments/: calibrator_mae_20251008_161607.joblib  calibrator_overall_qwk_20251008_161607.joblib  calibrator_qwk_within_0.5_20251008_162850.joblib  calibrator_xgboost_qwk_20251008_161654.joblib  calibrator_xgboost_qwk_20251008_161654_xgb.json  calibrator_xgboost_qwk_20251008_162850.joblib
notebooks/: gec.ipynb  ielts-scoring-kaggle_v2.ipynb  ielts-scoring-kaggle_v3(with result).ipynb  ielts_gpt_oss_fine_tuning.ipynb  ielts_scoring_kaggle.ipynb  oss20b_ielts_scoring_kaggle.ipynb
schemas/: facts_task1.v1.json  generate_question_request.v1.json  generate_question_response.v1.json  rubric_response.v1.json  score_request.v1.json  score_response.v1.json
src/app/: main.py  (+2 more)
tests/: test_aggregate.py  test_evaluation_smoke.py  test_metrics_endpoint.py  test_prompt_hash.py  test_schema_validation.py  test_score_endpoint.py
(+203 files in other folders)
